--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class='row'>
-            <div class='col-md-6'>
+            <div class='col-md-6' *ngIf='listFilter'>
                 <h3>Filtered by: {{ listFilter }}</h3>
             </div>
         </div>
@@ -34,7 +34,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor='let product of products'>
+                    <tr *ngFor='let product of filteredProducts'>
                         <td>
                             <img *ngIf='showImage'
                                 [src]='product.imageUrl' 
